fix(cia-default-content): sync data pack implementation